# TradingMonitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  secrets.yaml.example  signals.yaml
docs/: SPEC.md
scripts/: kill_scanner.sh  run_history.py
src/alerts/: __init__.py  deduplication.py  manager.py  push.py  scoring.py
src/config/: settings.py
src/core/: __init__.py  lifecycle.py  main.py  position_monitor.py  realtime_scanner.py  scanner.py  signal_store.py
src/data/: __init__.py  background_tasks.py  cache.py  exchange.py  history.py  history_db.py  history_downloader.py  price_cache.py  websocket.py
src/notification/: __init__.py  feishu.py
src/signals/: __init__.py  evaluator.py  factory.py  indicators.py  registry.py  stage1.py  stage2.py
src/utils/: __init__.py  health.py  logging.py
tests/: test_deduplication.py  test_indicators.py
